# bakabot

./: .gitignore  README.md  accio.py  adapter.py  backend.py  bot.py  config.ini  config.py  log.txt  mypy.ini  options.py  pipeline.py  pyproject.toml  revprocessor.py  start_bot.bat  start_bot.py
accio/: __init__.py  accio.py
cqhttp/: base.py
cqhttp/api/: __init__.py  base.py  bot_account.py  file.py  friend_info.py  friend_operation.py  gocqhttp_related.py  group_config.py  group_info.py  group_operation.py  handle.py  image.py  message.py  record.py
cqhttp/api/bot_account/: GetLoginInfo.py  GetModelShow.py  GetOnlineClients.py  QidianGetAccountInfo.py  SetModelShow.py  SetQQProfile.py  __init__.py
cqhttp/api/file/: CreateGroupFileFolder.py  DeleteGroupFile.py  DeleteGroupFolder.py  GetGroupFileSystemInfo.py  GetGroupFileUrl.py  GetGroupFilesByFolder.py  GetGroupRootFiles.py  UploadGroupFile.py  UploadPrivateFile.py
cqhttp/api/friend_info/: GetFriendList.py  GetStrangerInfo.py  GetUnidirectionalFriendList.py
cqhttp/api/friend_operation/: DeleteFriend.py  __init__.py  (+1 more)
cqhttp/cqcode/: __init__.py  base.py  cqcode.py
cqhttp/events/: __init__.py  base.py  message.py  meta_event.py  notice.py  request.py
db/: base.py  database.py
db/models/: __init__.py  core.py  service.py
events/: base.py  message.py  meta_event.py  notice.py  request.py
service/: __init__.py  base.py  command.py
services/: __init__.py  baka_response.py  barber_shop.py  base.py  bilibili_ab_trans.py  bilibili_cover.py  choose_or.py  command.py  compiler_explorer.py  daxuexi_screenshot.py  echo.py  emoji_mix.py  kfy.py  message_failed_echo.py  nowday_cp.py  nowday_fortune.py  nowday_news.py  on_friend_group.py  on_new_friend_group.py  pid.py  poke_back.py  random_art.py  random_touhou.py  roll.py  search_image.py  search_song.py  sponsor.py  take_back_msg.py  thb_message_notify.py  welcome_newcomer.py  yukkuri.py
services/core/: base.py  blacklist.py  command.py  core_manager.py  message_pre_process.py  whitelist.py
services/game/: __init__.py  akinator.py  base.py  roulette.py
tests/: mock.py
utils/: __init__.py  algorithm.py  core_event.py  interconnect.py  request.py  send_msg.py  subevent.py  wrapper.py
(+62 files in other folders)
