[tool.poetry]
name = "bakabot"
version = "0.1.0"
description = "bakabot"
authors = ["flpFlan"]
repository = "https://github.com/flpFlan/bakabot"

[tool.poetry.dependencies]
python = "^3.11"
quart = "^0.18.4"
websockets = "^11.0.1"
aiohttp = "^3.8.4"
sqlalchemy = "^2.0.15"
pycryptodome = "^3.17"
requests = "^2.28.2"
APScheduler = "^3.10.1"
redis = "^4.5.4"
beautifulsoup4 = "^4.12.2"
fake-useragent = "^1.1.3"
emoji = "^2.2.0"
numpy = "^1.24.3"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"