[tool.poetry]
name = "bakabot"
version = "0.1.0"
description = "bakabot"
authors = ["flpFlan <2104357372@qq.com>"]
repository = "https://github.com/flpFlan/bakabot"
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.1"
requests = "^2.31.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.20" }
pycryptodome = "^3.17"
APScheduler = "^3.10.1"
redis = "^4.5.4"
beautifulsoup4 = "^4.12.2"
emoji = "^2.2.0"
numpy = "^1.24.3"
aiosqlite = "^0.19.0"
fake-useragent = "^1.1.3"
typing-extensions = "^4.7.1"

[tool.poetry.extras]
unix = ["uvloop"]
game = ["akinator[fast_async]", "aiohttp"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
quart = "^0.18.4"
mypy = "^1.5.0"

[[tool.poetry.source]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
